test/libyul/yulSyntaxTests/objects/object_hex_name.yul
object hex"11" {
  code {}
}
// ----
// ParserError 2314: (7-14): Expected 'StringLiteral' but got 'HexStringLiteral'
